--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -21,7 +21,7 @@
 \newcommand{\mylabnumber}{1}
 \newcommand{\mylabtitle}{Создание титульника в латеке}
 \newcommand{\mysubject}{Какай-та дисциплина}
-\newcommand{\mymentor}{Захаров В.В.}
+\newcommand{\mylecturer}{Захаров В.В.}
 
 \renewcommand{\baselinestretch}{1.25} % Sets basic line stretch
 \renewcommand{\headrulewidth}{0pt} % Remove horizontal line below header in fancyhdr
