Updated report template

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -112,6 +112,10 @@
 
     \end{titlepage}
 
+    % ############################################################################
+    % ------------------------------ Document start ------------------------------
+    % ############################################################################
+
     \section{First section}
 
     Hello, here is some text without a meaning.  This text should show what 
