Updated report template

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -156,11 +156,15 @@
 
     \begin{figure}[H]
         \centering
-        \subfloat[fig1]{\includegraphics[width=.4\linewidth]{Points}}\hspace{.15\linewidth}
+
+        \subfloat[fig1]{\includegraphics[width=.4\linewidth]{Points}}
+        \hspace{.15\linewidth}
         \subfloat[fig2]{\includegraphics[width=.4\linewidth]{Points}}
         \\
-        \subfloat[fig3]{\includegraphics[width=.4\linewidth]{Points}}\hspace{.15\linewidth}
+        \subfloat[fig3]{\includegraphics[width=.4\linewidth]{Points}}
+        \hspace{.15\linewidth}
         \subfloat[fig4]{\includegraphics[width=.4\linewidth]{Points}}
+        
         \caption{Результат работы программы "Hello, World!"}
     \end{figure}
 
