--- a/.Net/Lab1/Report.tex
+++ b/.Net/Lab1/Report.tex
@@ -180,8 +180,6 @@
         \item Задан текст. Определить, является ли он текстом на английском языке.
 
     \end{enumerate}
-
-    \pagebreak
     
     \section{Ход работы}
 
@@ -276,10 +274,10 @@
 
                 var columnsAverages = matrix
                                         .GetColumns()
-                                        .Select(x => Enumerable.Average(x))
+                                        .Select(x => x.Average())
                                         .ToArray();
 
-                return Array.IndexOf(columnsAverages, Enumerable.Max(columnsAverages));
+                return Array.IndexOf(columnsAverages, columnsAverages.Max());
             }
 
             public static void PrintMatrix(int[,] matrix)
@@ -315,7 +313,40 @@
                 }
             }
         }
+
+        public class Program
+        {
+            public static void CheckArrays()
+            {
+                WriteLine("Checking arrays task");
+
+                const int M = 5;
+                const int N = 10;
+                var matrix = new int[M, N];
+                var random = new Random();
+
+                for (var i = 0; i < matrix.GetLength(0); i++)
+                    for (var j = 0; j < matrix.GetLength(1); j++)
+                        matrix[i, j] = random.Next(100);
+
+                ArrayOperations.PrintMatrix(matrix);
+
+                WriteLine("\nAverages:\n");
+                foreach (var item in matrix.GetColumns().Select(x => x.Average()))
+                    Write($"{item} ");
+
+                WriteLine($"\nColumn with maximal average: {ArrayOperations.GetMaximalAverageColumn(matrix)}");
+            }
+        }
     \end{lstlisting}
+
+    Результат работы программы:
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=.4\textwidth]{Arrays}
+        \caption{Результат работы программы с операциями над массивами}
+    \end{figure}
 
     В данной программе активно используется библиотека System.Linq для операций
     над коллекциями. Также был написан extension-метод для извлечения столбцов
@@ -332,7 +363,30 @@
             public static IEnumerable<string> GetWordsStartingAndEndingTheSameLetter(string line)
                 => line.Split(" ").Where(x => x.First() == x.Last());
         }
+
+        public class Program
+        {
+            public static void CheckStrings()
+            {
+                WriteLine("Checking strings task");
+
+                WriteLine("Enter your string:");
+                var str = ReadLine();
+
+                WriteLine("Words starting and ending with the same letter:");
+                foreach (var word in StringOperations.GetWordsStartingAndEndingTheSameLetter(str))
+                    Write($"{word} ");
+            }
+        }
     \end{lstlisting}
+
+    Результат работы программы:
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=.4\textwidth]{Strings}
+        \caption{Результат работы программы с операциями над строками}
+    \end{figure}
 
     В данной программе используется метод Split класса String для разделения
     строки на подстроки, а также библиотека System.Linq для фильтрации 
@@ -352,7 +406,32 @@
             public static bool IsInEnglish(string test)
                 => Regex.IsMatch(test, englishRegexTemplate);
         }
+
+        public class Program
+        {
+            public static void CheckRegexes()
+            {
+                WriteLine("Checking regex task");
+
+                var englishText    = "A text in English with some punctuation marks:.,;!?()";
+                var notEnglishText = "Текст не на английском. Всякие знаки препинания:.?,!";
+
+                WriteLine(englishText);
+                WriteLine(RegexOperations.IsInEnglish(englishText));
+
+                WriteLine(notEnglishText);
+                WriteLine(RegexOperations.IsInEnglish(notEnglishText));
+            }
+        }
     \end{lstlisting}
+
+    Результат работы программы:
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=.4\textwidth]{Regexes}
+        \caption{Результат работы программы с операциями над регулярными выражениями}
+    \end{figure}
 
     В данной программе создан класс, полем которого является шаблон регулярного
     выражения, осуществляющего проверку того, что все встреченные в строке символы
@@ -377,8 +456,8 @@
     проблем с производительность в таких случаях используют класс StringBuilder.
     Класс String также содержит множество методов для работы со строками.
 
-    Регулярные выражения - мощный инструмент для работы со строками. Он позволяет
+    Регулярные выражения - мощный инструмент для работы со строками. Они позволяют
     проверять строку на соответствие шаблону и производить поиск подстрок в строке.
-    Соответствующие операции обычными методами требуют намного большего времени и усилий.
+    Соответствующие операции обычными методами более трудозатратны.
 
 \end{document}
