Updated report template to contain correct quotation marks and fixed title page font size

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -19,6 +19,7 @@
 \usepackage{color}
 \usepackage{enumitem}
 \usepackage{subfig}
+\usepackage{csquotes}
 
 \graphicspath{ {./images/} }
 
@@ -120,13 +121,12 @@
             Кафедра ИС
             
             \vfill
-            \large{
-                Отчет \\
-                по лабораторной работе №\mylabnumber \\
-                "\mylabtitle" \\
-                по дисциплине \\
-                \MakeTextUppercase{\mysubject}
-            }
+
+            Отчет \\
+            по лабораторной работе №\mylabnumber \\
+            \enquote{\mylabtitle"} \\
+            по дисциплине \\
+            \enquote{\MakeTextUppercase{\mysubject}}
 
         \end{center}
 
