--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -18,7 +18,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{enumitem}
-\usepackage{subfig}
+\usepackage[font=normalsize]{subfig}
 \usepackage{csquotes}
 
 \graphicspath{ {./images/} }
