--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -96,6 +96,7 @@
 
     \lstset{ % "listings package configuration"
         basicstyle=\footnotesize\ttfamily,
+        breaklines=true,
         numbersep=5pt,
         tabsize=4,
         gobble=8,
