--- a/.Net/Lab1/Report.tex
+++ b/.Net/Lab1/Report.tex
@@ -96,6 +96,7 @@
 
     \lstset{ % "listings package configuration"
         basicstyle=\footnotesize\ttfamily,
+        breaklines=true,
         numbersep=5pt,
         tabsize=4,
         gobble=8,
@@ -134,7 +135,7 @@
 
         \vspace{1cm}
 
-        \noindent\hspace{7.5cm} Выполнил студент группы ИС/б-22о \\
+        \noindent\hspace{7.5cm} Выполнил студент группы ИС/б-32о \\
         \null\hspace{7.5cm} Горбенко К. Н. \\
         \null\hspace{7.5cm} Проверил \\
         \null\hspace{7.5cm} \mylecturer
