Updated report template to allow matrix insertions

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -20,6 +20,7 @@
 \usepackage{enumitem}
 \usepackage[font=normalsize]{subfig}
 \usepackage{csquotes}
+\usepackage{amsmath}
 
 \graphicspath{ {./images/} }
 
@@ -272,6 +273,13 @@
     contain all letters of the alphabet and it should be written in of the
     original language.There is no need for special content, but the length of
     words should match the language.
+
+    \begin{equation*}
+        \begin{pmatrix}
+            1 & 2 & 3 & 4 \\
+            5 & 6 & 7 & 8
+        \end{pmatrix}
+    \end{equation*}
 
     \begin{figure}[H]
         \includegraphics{Points}
