Fixed group number

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -119,7 +119,7 @@
 
         \vspace{1cm}
 
-        \noindent\hspace{7.5cm} Выполнил студент группы ИС/б-22о \\
+        \noindent\hspace{7.5cm} Выполнил студент группы ИС/б-17-2-о \\
         \null\hspace{7.5cm} Горбенко К. Н. \\
         \null\hspace{7.5cm} Проверил \\
         \null\hspace{7.5cm} \mylecturer
