--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -74,9 +74,7 @@
 \setlist[itemize, 3]{wide=3\parindent,leftmargin=2.5cm,topsep=0pt,itemsep=0pt,
     partopsep=0pt,parsep=0pt}
 
-\captionsetup[figure]{
-    justification=centering
-}
+\captionsetup[figure]{justification=centering}
 
 \begin{document}
 
