Fixed redundant quotes

--- a/Report template/ReportTemplate.tex
+++ b/Report template/ReportTemplate.tex
@@ -109,7 +109,7 @@
 
             Отчет \\
             по лабораторной работе №\mylabnumber \\
-            \enquote{\mylabtitle"} \\
+            \enquote{\mylabtitle} \\
             по дисциплине \\
             \enquote{\MakeTextUppercase{\mysubject}}
 
