Complete lab and draw up deport

--- a/Тестирование ПО/ЛР2/Report.tex
+++ b/Тестирование ПО/ЛР2/Report.tex
@@ -26,8 +26,8 @@
 
 \newcommand{\mylabnumber}{2}
 \newcommand{\mylabtitle}{Исследование способов структурного
-    тестирования программного обеспечения}
-\newcommand{\mysubject}{Тестиование программного обеспечения}
+                            тестирования программного обеспечения}
+\newcommand{\mysubject}{Тестиование ПО}
 \newcommand{\mylecturer}{Тлуховская Н.П.}
 
 \renewcommand{\baselinestretch}{1.25} % Sets basic line stretch
