Add references to figures

--- a/ТСИС/Lab1/report.tex
+++ b/ТСИС/Lab1/report.tex
@@ -34,7 +34,7 @@
 \end{equation}
 
 \subsection{Результаты измерений}
-На рисунках представлены результаты измерения зависимости выходного
+На рисунках \ref{fig:0v} - \ref{fig:5v} представлены результаты измерения зависимости выходного
 кода от входного напряжения.
 \begin{enumerate}
     \item $U = 0 \; B., N = 00000001_{2}$.
@@ -80,7 +80,6 @@
             \caption{Выходной код при U = 5 В.}
             \label{fig:5v}
         \end{figure}
-\end{enumerate}
 \section*{Выводы}
 В ходе лабораторной работы были изучены принципы преобразования аналоговых
 сигналов в цифровые и особенности схемной реализации АЦП последовательного
@@ -88,4 +87,5 @@
 
 У полученного АЦП минимальное значение напряжения больше шага квантования,
 следовательно, на выходе не может установиться нулевой код.
+\end{enumerate}
 \end{document}
